# fork-instead

./: README.md  action.py  action.yml  pyproject.toml
.github/workflows/: fingers-in-ears.yml
